force-app/main/default/objects/Contact/fields/AccountCountry__c.field-meta.xml
<CustomField>
    <fullName>AccountCountry__c</fullName>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountCountry</label>
    <type>Text</type>
</CustomField>