force-app/main/default/objects/Contact/fields/Authorized_to_install__c.field-meta.xml
<CustomField>
    <fullName>Authorized_to_install__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if reseller got the certificate to install machines (Mandatory for Metrios)</description>
    <label>Authorized to install &amp; service</label>
    <type>Checkbox</type>
</CustomField>