force-app/main/default/objects/Contact/fields/Authorized_to_sell__c.field-meta.xml
<CustomField>
    <fullName>Authorized_to_sell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check it for resellers trained to sell the product (Mandatory for Metrios)</description>
    <label>Authorized to sell</label>
    <type>Checkbox</type>
</CustomField>