force-app/main/default/objects/Contact/fields/Billing_state_province__c.field-meta.xml
<CustomField>
    <fullName>Billing_state_province__c</fullName>
    <label>Billing state/province</label>
    <length>200</length>
    <type>Text</type>
</CustomField>