force-app/main/default/objects/Contact/fields/Christmas_Present__c.field-meta.xml
<CustomField>
    <fullName>Christmas_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chck this box to send to the contact a Christmas present</description>
    <label>Christmas Present</label>
    <type>Checkbox</type>
</CustomField>