force-app/main/default/objects/Contact/fields/Collected_by__c.field-meta.xml
<CustomField>
    <fullName>Collected_by__c</fullName>
    <label>Collected by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>