force-app/main/default/objects/Contact/fields/Consenso_form__c.field-meta.xml
<CustomField>
    <fullName>Consenso_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consenso form</label>
    <type>Checkbox</type>
</CustomField>