force-app/main/default/objects/Contact/fields/Contact_name_in_foreign_language__c.field-meta.xml
<CustomField>
    <fullName>Contact_name_in_foreign_language__c</fullName>
    <label>Contact name in foreign language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>