force-app/main/default/objects/Contact/fields/Data_Invio_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Data_Invio_GDPR__c</fullName>
    <label>Data Invio GDPR</label>
    <type>DateTime</type>
</CustomField>