force-app/main/default/objects/Contact/fields/Data_risposta_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Data_risposta_GDPR__c</fullName>
    <label>Data risposta GDPR</label>
    <type>DateTime</type>
</CustomField>