force-app/main/default/objects/Contact/fields/Description_in_foreign_language__c.field-meta.xml
<CustomField>
    <fullName>Description_in_foreign_language__c</fullName>
    <label>Description in foreign language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>