force-app/main/default/objects/Contact/fields/Descrizione_2__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_2__c</fullName>
    <label>Descrizione 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>