force-app/main/default/objects/Contact/fields/E_learning_free_enrollment_date__c.field-meta.xml
<CustomField>
    <fullName>E_learning_free_enrollment_date__c</fullName>
    <inlineHelpText>Fill this field with a date when you enroll a user to the e-learning platform</inlineHelpText>
    <label>Metrios E-learning free enrollment date</label>
    <type>Date</type>
</CustomField>