force-app/main/default/objects/Contact/fields/Geographic_Zone__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Zone__c</fullName>
    <inlineHelpText>Select the geographic area to choose among permitted terms of payment. If the offer is adressed to a reseller, it will automatically self set from reseller agreement chart.</inlineHelpText>
    <label>Geographic Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Rest of Europe</fullName>
            </value>
            <value>
                <fullName>Rest of the world</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>