force-app/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency -Distributor - Reseller</fullName>
            </value>
            <value>
                <fullName>Turning</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Mechanical workshops</fullName>
            </value>
            <value>
                <fullName>Dental Implantology</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Aeronautical</fullName>
            </value>
            <value>
                <fullName>Naval</fullName>
            </value>
            <value>
                <fullName>Clock-making</fullName>
            </value>
            <value>
                <fullName>Faucets</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Screw Producer - Schrauben</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>