force-app/main/default/objects/Contact/fields/isBlocked__c.field-meta.xml
<CustomField>
    <fullName>isBlocked__c</fullName>
    <formula>IF( Login_Error_Count__c &gt; 3, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isBlocked</label>
    <type>Checkbox</type>
</CustomField>