force-app/main/default/objects/Contact/fields/isChangeEmailGDPR__c.field-meta.xml
<CustomField>
    <fullName>isChangeEmailGDPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isChangeEmailGDPR</label>
    <type>Checkbox</type>
</CustomField>