force-app/main/default/objects/Contact/fields/Jacket_type__c.field-meta.xml
<CustomField>
    <fullName>Jacket_type__c</fullName>
    <label>Jacket type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vici_Vision_Jacket__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>