force-app/main/default/objects/Contact/fields/Last_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_Request__c</fullName>
    <label>Last Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>