force-app/main/default/objects/Contact/fields/Last_sales_training__c.field-meta.xml
<CustomField>
    <fullName>Last_sales_training__c</fullName>
    <label>Last sales training</label>
    <type>Date</type>
</CustomField>