force-app/main/default/objects/Contact/fields/Last_service_training__c.field-meta.xml
<CustomField>
    <fullName>Last_service_training__c</fullName>
    <label>Last installation &amp; service training</label>
    <type>Date</type>
</CustomField>