force-app/main/default/objects/Contact/fields/Last_Succesfully_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Succesfully_Login__c</fullName>
    <label>Last Succesfully Login</label>
    <type>DateTime</type>
</CustomField>