force-app/main/default/objects/Contact/fields/Lingua_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Lingua_GDPR__c</fullName>
    <formula>IF( AccountCountry__c ==&apos;Italy&apos; ,&apos;it_IT&apos;, &apos;en_EN&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lingua GDPR</label>
    <type>Text</type>
</CustomField>