force-app/main/default/objects/Contact/fields/Login_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Login_Error_Count__c</fullName>
    <label>Login Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>