force-app/main/default/objects/Contact/fields/Machine_user_MTL__c.field-meta.xml
<CustomField>
    <fullName>Machine_user_MTL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill this checkbox if this contact is the machine user. He will receive after sales emails</description>
    <inlineHelpText>Fill this checkbox if this contact is the machine user. He will receive after sales emails</inlineHelpText>
    <label>Machine user MTL</label>
    <type>Checkbox</type>
</CustomField>