force-app/main/default/objects/Contact/fields/Metrios_Last_Calibration_Date__c.field-meta.xml
<CustomField>
    <fullName>Metrios_Last_Calibration_Date__c</fullName>
    <label>Metrios Last Calibration Date</label>
    <type>Date</type>
</CustomField>