force-app/main/default/objects/Contact/fields/MN_ImportErrors__c.field-meta.xml
<CustomField>
    <fullName>MN_ImportErrors__c</fullName>
    <description>Failed import debug message</description>
    <inlineHelpText>Failed import debug message</inlineHelpText>
    <label>MN_ImportErrors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>