force-app/main/default/objects/Contact/fields/MN_LastImport__c.field-meta.xml
<CustomField>
    <fullName>MN_LastImport__c</fullName>
    <description>Timestamp for latest import attempt</description>
    <inlineHelpText>Timestamp for latest import attempt</inlineHelpText>
    <label>MN_LastImport</label>
    <type>DateTime</type>
</CustomField>