force-app/main/default/objects/Contact/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password Dealer Portal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>