force-app/main/default/objects/Contact/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MTL</fullName>
            </value>
            <value>
                <fullName>FOV</fullName>
            </value>
            <value>
                <fullName>AUTOMATION</fullName>
            </value>
            <value>
                <fullName>CABINET</fullName>
            </value>
            <value>
                <fullName>MTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>