force-app/main/default/objects/Contact/fields/resetPwdDealer__c.field-meta.xml
<CustomField>
    <fullName>resetPwdDealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>resetPwdDealer</label>
    <type>Checkbox</type>
</CustomField>