force-app/main/default/objects/Contact/fields/sendEmail__c.field-meta.xml
<CustomField>
    <fullName>sendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sendEmail</label>
    <type>Checkbox</type>
</CustomField>