force-app/main/default/objects/Contact/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>