force-app/main/default/objects/Contact/fields/terms_of_paymet__c.field-meta.xml
<CustomField>
    <fullName>terms_of_paymet__c</fullName>
    <label>terms of payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T.T. 30 days from invoice date</fullName>
            </value>
            <value>
                <fullName>R.B. 60 days invoice date, end of the month</fullName>
            </value>
            <value>
                <fullName>R.B. 60/90 days invoice date, end of the month</fullName>
            </value>
            <value>
                <fullName>R.B. 60/90/120 days invoice date, end of the month</fullName>
            </value>
            <value>
                <fullName>leasing / operative rental</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>100% Net at  30 days</fullName>
            </value>
            <value>
                <fullName>100% Net at  60 days</fullName>
            </value>
            <value>
                <fullName>100% Net at  90 days</fullName>
            </value>
            <value>
                <fullName>100% downpayment before shipment</fullName>
            </value>
            <value>
                <fullName>30% upon order  - 30% before shipment + 40% 60 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>