force-app/main/default/objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username Dealer Portal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>