force-app/main/default/objects/Contact/fields/Vici_Vision_Jacket__c.field-meta.xml
<CustomField>
    <fullName>Vici_Vision_Jacket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>select this field to send a Vici Vision jacket</description>
    <label>Vici Vision Jacket</label>
    <type>Checkbox</type>
</CustomField>