force-app/main/default/objects/Contact/fields/Vicivision_Last_calibration_date__c.field-meta.xml
<CustomField>
    <fullName>Vicivision_Last_calibration_date__c</fullName>
    <label>Vicivision Last Calibration Date</label>
    <type>Date</type>
</CustomField>