force-app/main/default/objects/Contact/listViews/VICIVISION_CHINA.listView-meta.xml
<ListView>
    <fullName>VICIVISION_CHINA</fullName>
    <columns>PARENT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>park</value>
    </filters>
    <label>CONTACTS VICIVISION CHINA</label>
    <language>en_US</language>
</ListView>